[ROU-3940] -  Issue on Android when dealing with the header spacing (#589)
* Fix the way inline style attribute was being updated.

* Fixed Menu styles when data-status-bar-height is on.

* Fix the SectionIndex position when statusBar exist!

--- a/src/scripts/OSFramework/Pattern/SectionIndex/scss/_sectionindex.scss
+++ b/src/scripts/OSFramework/Pattern/SectionIndex/scss/_sectionindex.scss
@@ -101,7 +101,7 @@
 			left: calc(var(--os-safe-area-right) + var(--space-base));
 			padding: 0 var(--space-base) 0 0;
 			position: fixed;
-			top: var(--header-size);
+			top: calc(var(--header-size) + var(--header-size-content) + var(--status-bar-height));
 			z-index: 1;
 		}
 	}
@@ -118,18 +118,6 @@
 }
 
 // Browser -----------------------------------------------------------------------
-///
-.android[data-status-bar-height] {
-	.layout-native {
-		.osui-section-index {
-			&--is-sticky {
-				top: calc(
-					var(--header-size) + var(--header-size-content) + var(--top-position) + var(--status-bar-height)
-				);
-			}
-		}
-	}
-}
 
 // Fixes the sticky problem on Safari 14.1
 ///
